[Bug][184] Add icon classes for external links.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -52,7 +52,7 @@
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
               <li>
-                <a href="#">This is a really long link <i class="icon-external"></i> <span class="rs-dropdown-caption">And I have a caption.</a>
+                <a href="#">This is a really long link <i class="rs-icon-external"></i> <span class="rs-dropdown-caption">And I have a caption.</a>
               </li>
             </ul>
           </li>
@@ -365,7 +365,7 @@
     <div class="rs-container">
       <ul class="rs-links">
         <li>&copy; 2013 Rackspace, US</li>
-        <li><a href="">Link Text</a></li>
+        <li><a href="">Link Text <i class="rs-icon-external-dark"></i></a></li>
         <li><a href="">Link Text</a></li>
       </ul>
       <p class="rs-link rs-pull-right">Pull right for <a href="#">Feedback</a></p>
