--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -40,8 +40,8 @@
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link External <i class="icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
+        <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
+        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
         <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
@@ -55,8 +55,8 @@
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link External <i class="icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
+        <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
+        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
         <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
@@ -69,8 +69,8 @@
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
         <li><span class="rs-dropdown-category">External</span></li>
-        <li><a href="#">Link External <i class="icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
+        <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
+        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
         <li><span class="rs-dropdown-category">Captions</span></li>
         <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
@@ -83,8 +83,8 @@
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
         <li><span class="rs-dropdown-category">External</span></li>
-        <li><a href="#">Link External <i class="icon-external"></i></a></li>
-        <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
+        <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
+        <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
         <li><span class="rs-dropdown-category">Captions</span></li>
         <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
