[Bug][184] Add icon class for help tooltips.

--- a/examples/screenshots/tooltip.html
+++ b/examples/screenshots/tooltip.html
@@ -10,7 +10,7 @@
 </head>
 <body class="rs-responsive">
   <div style="padding: 40px">
-    <p><i class="icon-help"></i></p>
+    <p>I'm something complicated. <i class="rs-icon-help"></i></p>
     <div class="rs-tooltip">
       <div class="rs-tooltip-inner">
         Tooltips are hidden by default.
