[Bug][184] Add icon class for form validation.

--- a/examples/screenshots/forms.html
+++ b/examples/screenshots/forms.html
@@ -103,7 +103,7 @@
             <option>One</option>
             <option>Two</option>
           </select>
-          <span class="rs-validation-inline"><i class="icon-ok-circle"></i>Everything works!</span>
+          <span class="rs-validation-inline"><i class="rs-icon-validation-success"></i>Everything works!</span>
         </div>
       </div>
       <div class="rs-control-group error">
@@ -119,7 +119,7 @@
             <strong>B</strong>
             <span class="rs-help-block">B-Sub</span>
           </label>
-          <span class="rs-validation-block"><i class="icon-exclamation-sign"></i>You should at least select one item.</span>
+          <span class="rs-validation-block"><i class="rs-icon-validation-error"></i>You should at least select one item.</span>
         </div>
       </div>
       <div class="rs-control-group">
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="rs-control-group error">
-        <span class="rs-validation-block"><i class="icon-exclamation-sign"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <span class="rs-validation-block"><i class="rs-icon-validation-error"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -172,7 +172,7 @@
             <option>One</option>
             <option>Two</option>
           </select>
-          <span class="rs-validation-inline"><i class="icon-ok-circle"></i>Everything works!</span>
+          <span class="rs-validation-inline"><i class="rs-icon-validation-success"></i>Everything works!</span>
         </div>
       </div>
       <div class="rs-control-group error">
@@ -188,7 +188,7 @@
             <strong>B</strong>
             <span class="rs-help-block">B-Sub</span>
           </label>
-          <span class="rs-validation-block"><i class="icon-exclamation-sign"></i>You should at least select one item.</span>
+          <span class="rs-validation-block"><i class="rs-icon-validation-error"></i>You should at least select one item.</span>
         </div>
       </div>
       <div class="rs-control-group">
@@ -215,7 +215,7 @@
         </div>
       </div>
       <div class="rs-control-group error">
-        <span class="rs-validation-block"><i class="icon-exclamation-sign"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <span class="rs-validation-block"><i class="rs-icon-validation-error"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
