[Feature][205] Add button group.

--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -11,95 +11,95 @@
 <body class="rs-responsive" style="background: #fff;">
   <!-- DEFAULT BUTTONS -->
   <!-- Button Tag -->
-  <p>
+  <div class="rs-btn-group">
     <button class="rs-btn">Default</button>
     <button class="rs-btn active">Active</button>
     <button class="rs-btn disabled">Disabled</button>
     <button class="rs-btn hover">Hover</button>
-  </p>
+  </div>
   <!-- Input Tag -->
-  <p>
+  <div class="rs-btn-group">
     <input class="rs-btn" type="button" value="Default">
     <input class="rs-btn active" type="button" value="Active">
     <input class="rs-btn disabled" type="button" value="Disabled">
     <input class="rs-btn hover" type="button" value="Hover">
-  </p>
+  </div>
   <!-- Anchor Tag -->
-  <p>
+  <div class="rs-btn-group">
     <a class="rs-btn">Default</a>
     <a class="rs-btn active">Active</a>
     <a class="rs-btn disabled">Disabled</a>
     <a class="rs-btn hover">Hover</a>
-  </p>
+  </div>
   <!-- PRIMARY BUTTONS -->
   <!-- Button Tag -->
-  <p>
+  <div class="rs-btn-group">
     <button class="rs-btn rs-btn-primary">Default</button>
     <button class="rs-btn rs-btn-primary active">Active</button>
     <button class="rs-btn rs-btn-primary disabled">Disabled</button>
     <button class="rs-btn rs-btn-primary hover">Hover</button>
-  </p>
+  </div>
   <!-- Input Tag -->
-  <p>
+  <div class="rs-btn-group">
     <input class="rs-btn rs-btn-primary" type="button" value="Default">
     <input class="rs-btn rs-btn-primary active" type="button" value="Active">
     <input class="rs-btn rs-btn-primary disabled" type="button" value="Disabled">
     <input class="rs-btn rs-btn-primary hover" type="button" value="Hover">
-  </p>
+  </div>
   <!-- Anchor Tag -->
-  <p>
+  <div class="rs-btn-group">
     <a class="rs-btn rs-btn-primary">Default</a>
     <a class="rs-btn rs-btn-primary active">Active</a>
     <a class="rs-btn rs-btn-primary disabled">Disabled</a>
     <a class="rs-btn rs-btn-primary hover">Hover</a>
-  </p>
+  </div>
   <!-- LOGIN BUTTONS -->
   <!-- Button Tag -->
-  <p>
+  <div class="rs-btn-group">
     <button class="rs-btn rs-btn-login">Default</button>
     <button class="rs-btn rs-btn-login active">Active</button>
     <button class="rs-btn rs-btn-login disabled">Disabled</button>
     <button class="rs-btn rs-btn-login hover">Hover</button>
-  </p>
+  </div>
   <!-- Input Tag -->
-  <p>
+  <div class="rs-btn-group">
     <input class="rs-btn rs-btn-login" type="button" value="Default">
     <input class="rs-btn rs-btn-login active" type="button" value="Active">
     <input class="rs-btn rs-btn-login disabled" type="button" value="Disabled">
     <input class="rs-btn rs-btn-login hover" type="button" value="Hover">
-  </p>
+  </div>
   <!-- Anchor Tag -->
-  <p>
+  <div class="rs-btn-group">
     <a class="rs-btn rs-btn-login">Default</a>
     <a class="rs-btn rs-btn-login active">Active</a>
     <a class="rs-btn rs-btn-login disabled">Disabled</a>
     <a class="rs-btn rs-btn-login hover">Hover</a>
-  </p>
+  </div>
   <!-- LINK BUTTONS -->
   <!-- Button Tag -->
-  <p>
+  <div class="rs-btn-group">
     <button class="rs-btn rs-btn-link">Default</button>
     <button class="rs-btn rs-btn-link active">Active</button>
     <button class="rs-btn rs-btn-link disabled">Disabled</button>
     <button class="rs-btn rs-btn-link hover">Hover</button>
-  </p>
+  </div>
   <!-- Input Tag -->
-  <p>
+  <div class="rs-btn-group">
     <input class="rs-btn rs-btn-link" type="button" value="Default">
     <input class="rs-btn rs-btn-link active" type="button" value="Active">
     <input class="rs-btn rs-btn-link disabled" type="button" value="Disabled">
     <input class="rs-btn rs-btn-link hover" type="button" value="Hover">
-  </p>
+  </div>
   <!-- Anchor Tag -->
-  <p>
+  <div class="rs-btn-group">
     <a class="rs-btn rs-btn-link">Default</a>
     <a class="rs-btn rs-btn-link active">Active</a>
     <a class="rs-btn rs-btn-link disabled">Disabled</a>
     <a class="rs-btn rs-btn-link hover">Hover</a>
-  </p>
+  </div>
   <!-- ACTION BUTTONS -->
   <!-- Button Tag -->
-  <p>
+  <div class="rs-btn-group">
     <button class="rs-btn rs-btn-action">
       <span class="rs-cog"></span>
       Default
@@ -120,9 +120,9 @@
       Hover
       <span class="rs-caret"></span>
     </button>
-  </p>
+  </div>
   <!-- Anchor Tag -->
-  <p>
+  <div class="rs-btn-group">
     <a class="rs-btn rs-btn-action">
       <span class="rs-cog"></span>
       Default
@@ -143,28 +143,28 @@
       Hover
       <span class="rs-caret"></span>
     </a>
-  </p>
+  </div>
   <!-- ACTION COG -->
   <!-- Button Tag -->
-  <p>
+  <div class="rs-btn-group">
     <button class="rs-cog"></button>
     <button class="rs-cog active"></button>
     <button class="rs-cog disabled"></button>
     <button class="rs-cog hover"></button>
-  </p>
+  </div>
   <!-- Input Tag -->
-  <p>
+  <div class="rs-btn-group">
     <input class="rs-cog" type="button">
     <input class="rs-cog active" type="button">
     <input class="rs-cog disabled" type="button">
     <input class="rs-cog hover" type="button">
-  </p>
+  </div>
   <!-- Anchor Tag -->
-  <p>
+  <div class="rs-btn-group">
     <a class="rs-cog"></a>
     <a class="rs-cog active"></a>
     <a class="rs-cog disabled"></a>
     <a class="rs-cog hover"></a>
-  </p>
+  </div>
 </body>
 </html>
