[Bug][184] Use default tooltip positioning for screenshot tests.

--- a/examples/screenshots/tooltip.html
+++ b/examples/screenshots/tooltip.html
@@ -7,6 +7,15 @@
   <title>Screenshot | Tooltip</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+
+  <style>
+
+  .rs-tooltip {
+    top: auto;
+    left: auto;
+  }
+
+  </style>
 </head>
 <body class="rs-responsive">
   <div style="padding: 40px">
