--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -46,7 +46,7 @@
           <li class="hover"><a href="#">Link Two</a></li>
           <li class="active"><a href="#">Link Three</a></li>
           <li class="rs-dropdown rs-primary-dropdown active">
-            <a href="#">Link Four <i class="rs-dropdown-toggle"></i></a>
+            <a href="#" class="rs-dropdown-toggle">Link Four <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu visible">
               <li><span class="rs-dropdown-category">Category</span></li>
               <li><a href="#">One</a></li>
