[Bug][182] Prevent menu items from wrapping.

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -58,7 +58,7 @@
         <li><a href="#">Link External <i class="rs-icon-external-dark"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-divider"></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
@@ -86,7 +86,7 @@
         <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
         <li><span class="rs-dropdown-category">Captions</span></li>
-        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
