--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -93,7 +93,7 @@
     <div style="margin-top: 350px;"></div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
-      <ul class="rs-dropdown-menu pull-right">
+      <ul class="rs-dropdown-menu rs-pull-right">
         <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
@@ -104,7 +104,7 @@
     </div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Visible)</a>
-      <ul class="rs-dropdown-menu pull-right visible">
+      <ul class="rs-dropdown-menu rs-pull-right visible">
         <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
@@ -115,7 +115,7 @@
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Hidden)</a>
-      <ul class="rs-dropdown-menu pull-right">
+      <ul class="rs-dropdown-menu rs-pull-right">
         <li><span>Non Link Text</span></li>
         <li class="rs-divider"></li>
         <li><a href="#">Link</a></li>
@@ -130,7 +130,7 @@
     </div>
     <div class="rs-dropdown rs-utility-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Visible)</a>
-      <ul class="rs-dropdown-menu pull-right visible">
+      <ul class="rs-dropdown-menu rs-pull-right visible">
         <li><span>Non Link Text</span></li>
         <li class="rs-divider"></li>
         <li><a href="#">Link</a></li>
@@ -145,7 +145,7 @@
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Hidden)</a>
-      <ul class="rs-dropdown-menu pull-right">
+      <ul class="rs-dropdown-menu rs-pull-right">
         <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
@@ -159,7 +159,7 @@
     </div>
     <div class="rs-dropdown rs-primary-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Visible)</a>
-      <ul class="rs-dropdown-menu pull-right visible">
+      <ul class="rs-dropdown-menu rs-pull-right visible">
         <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
