--- a/spec/runner.html
+++ b/spec/runner.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="/vendor/mocha/mocha.css">
 
+  <script type="text/javascript" src="/components/jquery/jquery.js"></script>
   <script type="text/javascript" src="/vendor/chai/chai.js"></script>
   <script type="text/javascript" src="/vendor/mocha/mocha.js"></script>
   <script type="text/javascript" src="/vendor/mocha-sinon/sinon-1.6.0.js"></script>
@@ -27,7 +28,6 @@
   <script type="text/javascript" src="/vendor/mocha-sinon/mocha-sinon.js"></script>
   <script type="text/javascript" src="/vendor/sinon-chai/lib/sinon-chai.js"></script>
   <script type="text/javascript" src="/vendor/requirejs/require.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 </head>
 <body>
   <div id="mocha"></div>
