[Feature][236] Add collapsible detail section.

--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -9,10 +9,70 @@
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
 <body class="responsive" style="background: #fff;">
-  <div style="width: 800px; margin: 40px auto 0; border: 1px solid #ddd;">
+  <div style="width: 800px; margin: 0 auto; border: 1px solid #ddd;">
     <div class="rs-detail-section">
       <div class="rs-detail-section-header">
         <div class="rs-detail-section-title">Basic</div>
+        <div class="rs-detail-section-subtitle">This is a description.</div>
+      </div>
+      <div class="rs-detail-section-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+      </div>
+    </div>
+    <div class="rs-collapsible-section rs-detail-section expanded">
+      <div class="rs-detail-section-header">
+        <div class="rs-caret"></div>
+        <div class="rs-detail-section-title">Expanded</div>
+        <div class="rs-detail-section-subtitle">This is a description.</div>
+      </div>
+      <div class="rs-detail-section-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+      </div>
+    </div>
+    <div class="rs-collapsible-section rs-detail-section expanded">
+      <div class="rs-detail-section-header hover">
+        <div class="rs-caret"></div>
+        <div class="rs-detail-section-title">Expanded (Hover)</div>
+        <div class="rs-detail-section-subtitle">This is a description.</div>
+      </div>
+      <div class="rs-detail-section-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+      </div>
+    </div>
+    <div class="rs-collapsible-section rs-detail-section collapsed">
+      <div class="rs-detail-section-header">
+        <div class="rs-caret"></div>
+        <div class="rs-detail-section-title">Collapsed</div>
+        <div class="rs-detail-section-subtitle">This is a description.</div>
+      </div>
+      <div class="rs-detail-section-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+      </div>
+    </div>
+    <div class="rs-collapsible-section rs-detail-section collapsed">
+      <div class="rs-detail-section-header hover">
+        <div class="rs-caret"></div>
+        <div class="rs-detail-section-title">Collapsed (Hover)</div>
+        <div class="rs-detail-section-subtitle">This is a description.</div>
+      </div>
+      <div class="rs-detail-section-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+      </div>
+    </div>
+    <div class="rs-collapsible-section rs-detail-section loading">
+      <div class="rs-detail-section-header">
+        <div class="rs-caret"></div>
+        <div class="rs-detail-section-title">Loading</div>
+        <div class="rs-detail-section-subtitle">This is a description.</div>
+      </div>
+      <div class="rs-detail-section-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+      </div>
+    </div>
+    <div class="rs-collapsible-section rs-detail-section loading">
+      <div class="rs-detail-section-header hover">
+        <div class="rs-caret"></div>
+        <div class="rs-detail-section-title">Loading (Hover)</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
