[Feature][236] Add detail view header.

--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -10,6 +10,17 @@
 </head>
 <body class="responsive" style="background: #fff;">
   <div style="width: 800px; margin: 0 auto; border: 1px solid #ddd;">
+    <div class="rs-header-section">
+      <div class="rs-header-section-actions">
+        <button class="rs-btn rs-btn-action">
+          <span class="rs-cog"></span>
+          Actions
+          <span class="rs-caret"></span>
+        </button>
+      </div>
+      <div class="rs-header-section-subtitle">Subtitle</div>
+      <div class="rs-header-section-title">Category</div>
+    </div>
     <div class="rs-detail-section">
       <div class="rs-detail-section-header">
         <div class="rs-detail-section-title">Basic</div>
