--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -24,10 +24,22 @@
     <div class="rs-detail-section">
       <div class="rs-detail-section-header">
         <div class="rs-detail-section-title">Basic</div>
-        <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section expanded">
@@ -37,7 +49,20 @@
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section expanded">
@@ -47,7 +72,20 @@
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section collapsed">
@@ -57,7 +95,20 @@
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section collapsed">
@@ -67,7 +118,20 @@
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section loading">
@@ -77,7 +141,20 @@
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section loading">
@@ -87,7 +164,20 @@
         <div class="rs-detail-section-subtitle">This is a description.</div>
       </div>
       <div class="rs-detail-section-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, rerum ratione perspiciatis deleniti culpa saepe quibusdam consequatur sed et cum vitae at eaque possimus accusantium ea dolores voluptatum natus itaque.</p>
+        <ul class="rs-detail-list">
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">Value</div>
+          </li>
+          <li class="rs-detail-item">
+            <div class="rs-detail-key">Key</div>
+            <div class="rs-detail-value">
+              Many<br>
+              Different<br>
+              Values
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
