Point HTML file to assets compiled by Grunt.

--- a/examples/demos/index.html
+++ b/examples/demos/index.html
@@ -6,7 +6,7 @@
 
   <title>Canon Examples</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive">
   <h1>Typography</h1>
