--- a/examples/functional/menu.html
+++ b/examples/functional/menu.html
@@ -6,7 +6,7 @@
 
   <title>Functional | Menu</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
 
   <style type="text/css">
 
