--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -6,7 +6,7 @@
 
   <title>Screenshot | Detail View</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="responsive" style="background: #fff;">
   <div style="width: 800px; margin: 0 auto; border: 1px solid #ddd;">
