--- a/examples/demos/layout.html
+++ b/examples/demos/layout.html
@@ -6,7 +6,7 @@
 
   <title>Canon Layout</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body>
 <body class="rs-responsive">
