--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -6,7 +6,7 @@
 
   <title>Screenshot | Buttons</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive" style="background: #fff;">
   <!-- DEFAULT BUTTONS -->
