--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -6,7 +6,7 @@
 
   <title>Screenshot | Layout (Responsive)</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
   <style type="text/css">
     .show-grid [class*="span-"] {
       background: #b8b8b8; margin-bottom: 10px; border: 1px solid #777;
