--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -6,7 +6,7 @@
 
   <title>Screenshot | Menu</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
