--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -22,8 +22,26 @@
     <div class="rs-nav-utility rs-fixed-top">
       <div class="rs-container">
         <ul class="rs-nav">
+          <li class="rs-dropdown rs-utility-dropdown">
+            <a href="#">Link One <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
+          <li class="rs-dropdown rs-utility-dropdown hover">
+            <a href="#">Link Two <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
           <li class="rs-dropdown rs-utility-dropdown active">
-            <a href="#">Link One</a>
+            <a href="#">Link Three <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu visible">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
@@ -31,8 +49,9 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li><a href="#">Link Two</a></li>
-          <li><a href="#">Link Three</a></li>
+          <li><a href="#">Link Four</a></li>
+          <li class="hover"><a href="#">Link Five</a></li>
+          <li class="active"><a href="#">Link Six</a></li>
         </ul>
       </div>
     </div>
