--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -61,20 +61,36 @@
           <a href="#"></a>
         </div>
         <ul class="rs-nav">
-          <li><a href="#">Link One</a></li>
-          <li class="hover"><a href="#">Link Two</a></li>
-          <li class="active"><a href="#">Link Three</a></li>
-          <li class="rs-dropdown rs-primary-dropdown active">
-            <a href="#" class="rs-dropdown-toggle">Link Four <i class="rs-caret"></i></a>
-            <ul class="rs-dropdown-menu visible">
-              <li><span class="rs-dropdown-category">Category</span></li>
+          <li class="rs-dropdown rs-primary-dropdown">
+            <a href="#">Link One <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
-              <li>
-                <a href="#">This is a really long link <i class="rs-icon-external"></i> <span class="rs-dropdown-caption">And I have a caption.</a>
-              </li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
             </ul>
           </li>
+          <li class="rs-dropdown rs-primary-dropdown hover">
+            <a href="#">Link Two <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
+          <li class="rs-dropdown rs-primary-dropdown active">
+            <a href="#">Link Three <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu visible">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Link Four</a></li>
+          <li class="hover"><a href="#">Link Five</a></li>
+          <li class="active"><a href="#">Link Six</a></li>
         </ul>
       </div>
     </div>
