[Feature][252] Add styles for the edit button.

--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -166,5 +166,27 @@
     <a class="rs-cog disabled"></a>
     <a class="rs-cog hover"></a>
   </div>
+  <!-- Edit Button -->
+  <!-- Button Tag -->
+  <div class="rs-btn-group">
+    <button class="rs-edit"></button>
+    <button class="rs-edit active"></button>
+    <button class="rs-edit disabled"></button>
+    <button class="rs-edit hover"></button>
+  </div>
+  <!-- Input Tag -->
+  <div class="rs-btn-group">
+    <input class="rs-edit" type="button">
+    <input class="rs-edit active" type="button">
+    <input class="rs-edit disabled" type="button">
+    <input class="rs-edit hover" type="button">
+  </div>
+  <!-- Anchor Tag -->
+  <div class="rs-btn-group">
+    <a class="rs-edit"></a>
+    <a class="rs-edit active"></a>
+    <a class="rs-edit disabled"></a>
+    <a class="rs-edit hover"></a>
+  </div>
 </body>
 </html>
