[Feature][252] Add special layout rules for detail views.

--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -29,14 +29,14 @@
         <ul class="rs-detail-list">
           <li class="rs-detail-item">
             <div class="rs-detail-key">Key</div>
-            <div class="rs-detail-value">Value</div>
+            <div class="rs-detail-value">Value <button class="rs-edit"></button></div>
           </li>
           <li class="rs-detail-item">
             <div class="rs-detail-key">Key</div>
             <div class="rs-detail-value">
-              Many<br>
-              Different<br>
-              Values
+              Many <button class="rs-edit"></button><br>
+              Different <button class="rs-edit"></button><br>
+              Values <button class="rs-edit"></button>
             </div>
           </li>
         </ul>
