[Feature][252] Add class for displaying static content in a form.

--- a/examples/screenshots/forms.html
+++ b/examples/screenshots/forms.html
@@ -147,7 +147,7 @@
       </div>
       <div class="rs-control-group">
         <label class="rs-control-label">Seven</label>
-        <div class="rs-controls">Text Content <button class="rs-edit"></button></div>
+        <div class="rs-controls-static">Text Content <button class="rs-edit"></button></div>
       </div>
       <div class="rs-control-group error">
         <span class="rs-validation-block"><i class="rs-validation-indicator"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -220,7 +220,7 @@
       </div>
       <div class="rs-control-group">
         <label class="rs-control-label">Seven</label>
-        <div class="rs-controls">Text Content <button class="rs-edit"></button></div>
+        <div class="rs-controls-static">Text Content <button class="rs-edit"></button></div>
       </div>
       <div class="rs-control-group error">
         <span class="rs-validation-block"><i class="rs-validation-indicator"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
