Add status text examples and use color variables

--- a/examples/screenshots/status.html
+++ b/examples/screenshots/status.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/canon.css">
   </head>
   <body class="responsive" style="background: #fff;">
-    <!-- Status -->
+    <!-- Status Label -->
     <p>
       <span class="rs-status">Default</span>
       <span class="rs-status rs-status-ok">OK</span>
@@ -17,6 +17,14 @@
       <span class="rs-status rs-status-error">Error</span>
       <span class="rs-status rs-status-disabled">Disabled</span>
       <span class="rs-status rs-status-processing">Processing</span>
+    </p>
+    <!-- Status Text -->
+    <p>
+      <span class="rs-status-ok">OK</span>
+      <span class="rs-status-warning">Warning</span>
+      <span class="rs-status-error">Error</span>
+      <span class="rs-status-disabled">Disabled</span>
+      <span class="rs-status-processing">Processing</span>
     </p>
   </body>
 </html>
