change responsive to rs-responsive

--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="responsive" style="background: #fff;">
+<body class="rs-responsive" style="background: #fff;">
   <div style="width: 800px; margin: 0 auto; border: 1px solid #ddd;">
     <div class="rs-detail-header">
       <div class="rs-detail-header-actions">
