--- a/examples/screenshots/popover.html
+++ b/examples/screenshots/popover.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="responsive" style="background: #fff;">
+<body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <div class="rs-popover">
       <div class="rs-popover-arrow rs-popover-arrow-left-top"></div>
