Adding hover styles

--- a/examples/screenshots/tabs.html
+++ b/examples/screenshots/tabs.html
@@ -9,10 +9,9 @@
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <ul class="rs-tabs">
-      <li><a href="#one">One <span class="rs-quiet">(1)</span></a></li>
-      <li class="active"><a href="#two">Two <span class="rs-quiet">(2)</span></a></li>
-      <li><a href="#three">Three <span class="rs-quiet">(3)</span></a></li>
-      <li><a href="#four">Four <span class="rs-quiet">(4)</span></a></li>
+      <li><a href="#one">Normal <span class="rs-quiet">(1)</span></a></li>
+      <li class="active"><a href="#two">Active <span class="rs-quiet">(2)</span></a></li>
+      <li class="hover"><a href="#three">Hover <span class="rs-quiet">(3)</span></a></li>
     </ul>
 
     <div class="rs-tab-content">
@@ -24,9 +23,6 @@
       </div>
       <div class="rs-tab-pane">
         <p>Tab content pane three</p>
-      </div>
-      <div class="rs-tab-pane">
-        <p>Tab content pane four</p>
       </div>
     </div>
   </div>
