adding list-table basic styles

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -9,25 +9,103 @@
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive" style="background: #fff; padding: 40px;">
-  <table class="list-table">
-    <thead>
-      <tr>
-        <th class="list-table-header">One</th>
-        <th class="list-table-header">Two</th>
-        <th class="list-table-header">Three</th>
-        <th class="list-table-header">Four</th>
-        <th class="list-table-header">Five</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="list-table-cell">One</td>
-        <td class="list-table-cell">Two</td>
-        <td class="list-table-cell">Three</td>
-        <td class="list-table-cell">Four</td>
-        <td class="list-table-cell">Five</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="rs-list-table">
+    <table>
+      <thead>
+        <tr>
+          <th class="rs-table-status"></th>
+          <th>Two</th>
+          <th>Three</th>
+          <th>Four</th>
+          <th>Five</th>
+          <th>Six</th>
+          <th>Seven</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="rs-table-status rs-table-status-ok"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-warning"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-error"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-ok"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-warning"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-error"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-ok"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-warning"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+        <tr>
+          <td class="rs-table-status rs-table-status-error"></td>
+          <td><a href="#">Body</a></td>
+          <td>Body</td>
+          <td><a class="rs-btn" href="#">Button</a></td>
+          <td>Body</td>
+          <td>Body</td>
+          <td>Body</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
