updating classes for wrapper element

--- a/examples/demos/list.html
+++ b/examples/demos/list.html
@@ -108,8 +108,8 @@
                 <a href="#" class="rs-btn rs-btn-primary">Create Server</a>
                 <button class="rs-btn" disabled="">Delete</button>
               </div>
-              <div class="rs-list-table">
-                <table>
+              <div class="rs-list-table-wrapper">
+                <table class="rs-list-table">
                   <thead>
                     <tr>
                       <th class="rs-table-status"></th>
