--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive" style="background: #fff; padding: 40px;">
-  <div class="rs-list-table">
-    <table>
+  <div class="rs-list-table-wrapper">
+    <table class="rs-list-table">
       <thead>
         <tr>
           <th class="rs-table-status"></th>
