adding checkbox and cog to list-table screenshot

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -13,18 +13,22 @@
     <table class="rs-list-table">
       <thead>
         <tr>
-          <th class="rs-table-status"></th>
-          <th>Two</th>
-          <th>Three</th>
-          <th>Four</th>
-          <th>Five</th>
-          <th>Six</th>
-          <th>Seven</th>
+          <th class="rs-table-status">&emsp;</th>
+          <th class="rs-table-input"></th>
+          <th class="rs-table-cog"></th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td class="rs-table-status rs-table-status-ok"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td><a class="rs-btn" href="#">Button</a></td>
@@ -34,6 +38,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-warning"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td>Body</td>
@@ -43,6 +49,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-error"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td><a class="rs-btn" href="#">Button</a></td>
@@ -52,6 +60,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-ok"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td>Body</td>
@@ -61,6 +71,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-warning"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td><a class="rs-btn" href="#">Button</a></td>
@@ -70,6 +82,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-error"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td>Body</td>
@@ -79,6 +93,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-ok"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td><a class="rs-btn" href="#">Button</a></td>
@@ -88,6 +104,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-warning"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td>Body</td>
@@ -97,6 +115,8 @@
         </tr>
         <tr>
           <td class="rs-table-status rs-table-status-error"></td>
+          <td class="rs-table-input"><input type="checkbox"></td>
+          <td class="rs-table-cog"><button class="rs-cog"></button></td>
           <td><a href="#">Body</a></td>
           <td>Body</td>
           <td><a class="rs-btn" href="#">Button</a></td>
